https://github.com/ashimanov/agrozavr_html-css.git

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     font-size: 25px;
 }
 
-/* TOOLBAR - topmost part of the page, before <header> */
+/* TOOLBAR1 - topmost part of the page, before <header> */
 .wrapper-toolbar {
     padding: 5px 0;
     width: 100%;
