--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     font-size: 25px;
 }
 
-/* TOOLBAR1 - topmost part of the page, before <header> */
+/* TOOLBAR - topmost part of the page, before <header> */
 .wrapper-toolbar {
     padding: 5px 0;
     width: 100%;
@@ -42,9 +42,6 @@ body {
 }
 
 @media screen and (max-width: 456px) {
-    /* .toolbar-right-part {
-        margin-bottom: 10px;
-    } */
 
     .toolbar-right-part .toolbar-blocks:last-child {
         display: flex;
@@ -90,6 +87,7 @@ body {
 
 .toolbar-blocks button {
     padding: 0 12px;
+    background-color: #efefef;
 }
 
 .toolbar-blocks button + button {
