--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,15 +128,17 @@ header {
 
 .wrapper-header {
     width: 100%;
+    background-color: red;
 }
 
 .container-header {
     width: 100%;
     margin: 0 10px;
-    padding: 5px 5px 5px 20px;
+    padding: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: lightblue;
 }
 
 .wrapper-header-logo {
