--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -908,6 +908,12 @@ footer {
     grid-gap: 8px 15px;
 }
 
+@media (max-width: 490px) {
+    .footer_ul {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 .footer-li-item {
     color: #fff;
     font-size: 14px;
@@ -926,8 +932,27 @@ footer {
 
 .footer-contacts {
     margin: 25px 0 0 0;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     color: #fff;
+    align-items: center;
+}
+
+@media (max-width: 490px) {
+    .footer-contacts {
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+    }
+
+    .footer-contacts .footer_text:nth-child(3) {
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .footer-contacts .footer_text:nth-child(1) {
+        grid-column: 1;
+        grid-row: 1 / 3;
+    }
 }
 
 .footer_text {
