--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -657,6 +657,8 @@ header {
     font-size: 24px;
     font-weight: 700;
     color: #333;
+    text-align: center;
+    max-width: 70%;
 }
 
 .spacer-narrow {
