--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -893,6 +893,8 @@ footer {
 }
 
 .wrapper-footer {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     padding: 10px;
     color: #ffffff;
@@ -925,9 +927,9 @@ footer {
 }
 
 .footer-spacer {
-    width: 120%;
+    width: 100%;
     height: 1px;
-    margin: 25px 0 0 -10%;
+    margin: 25px auto 0 auto;
     background-color: #fff;
 }
 
